aeon/frontend/.antlr/AeonParser.java
// Generated from c:\Users\Paulo Santos\Desktop\git\aeon\aeonlang\aeon\frontend\Aeon.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AeonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, IF=3, ELSE=4, QUESTION=5, MAXIMIZE=6, MINIMIZE=7, EVALUATE=8, 
		PLUS=9, MINUS=10, MULT=11, QUOT=12, MODULE=13, POWER=14, CONJUNCTION=15, 
		DISJUNCTION=16, NOT=17, PIPE=18, LT=19, LE=20, GT=21, GE=22, EQUAL=23, 
		DIFF=24, ASSIGN=25, RARROW=26, FATARROW=27, IMPLIE=28, LBRACE=29, RBRACE=30, 
		LPARENS=31, RPARENS=32, LBRACKET=33, RBRACKET=34, TYPEE=35, AS=36, AND=37, 
		WHERE=38, NATIVE=39, UNINTERPRETED=40, ABSTRACTION=41, DOTDOT=42, DOT=43, 
		COLON=44, COMMA=45, SEMICOLON=46, BOOLEAN=47, INTEGER=48, FLOAT=49, STRING=50, 
		IDENTIFIER=51, TYPEE_IDENTIFIER=52, ABSTRACT_TYPEE_IDENTIFIER=53, LINE_COMMENT=54, 
		BLOCK_COMMENT=55, WS=56;
	public static final int
		RULE_aeon = 0, RULE_imprt = 1, RULE_regular_import = 2, RULE_function_import = 3, 
		RULE_import_path = 4, RULE_typee_alias = 5, RULE_typee_declaration = 6, 
		RULE_regular_typee_declaration = 7, RULE_parameterized_typee_declaration = 8, 
		RULE_parameters_typee_declaration = 9, RULE_typee = 10, RULE_typee_refined = 11, 
		RULE_typee_abstraction_type = 12, RULE_typee_definition = 13, RULE_typee_basic_type = 14, 
		RULE_typee_type_abstract = 15, RULE_typee_abstract_parameters = 16, RULE_function = 17, 
		RULE_function_identifier = 18, RULE_function_parameters = 19, RULE_function_where = 20, 
		RULE_function_body = 21, RULE_statement = 22, RULE_variable_definition = 23, 
		RULE_variable_assignment = 24, RULE_if_statement = 25, RULE_expression = 26, 
		RULE_function_abstraction = 27, RULE_call_parameters = 28;
	public static final String[] ruleNames = {
		"aeon", "imprt", "regular_import", "function_import", "import_path", "typee_alias", 
		"typee_declaration", "regular_typee_declaration", "parameterized_typee_declaration", 
		"parameters_typee_declaration", "typee", "typee_refined", "typee_abstraction_type", 
		"typee_definition", "typee_basic_type", "typee_type_abstract", "typee_abstract_parameters", 
		"function", "function_identifier", "function_parameters", "function_where", 
		"function_body", "statement", "variable_definition", "variable_assignment", 
		"if_statement", "expression", "function_abstraction", "call_parameters"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'import'", "'from'", "'if'", "'else'", "'?'", "'@maximize'", "'@minimize'", 
		"'@evaluate'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&&'", "'||'", 
		"'!'", "'|'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'='", "'->'", 
		"'=>'", "'-->'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'type'", "'as'", 
		"'and'", "'where'", "'native'", "'uninterpreted'", "'\\'", "'..'", "'.'", 
		"':'", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IMPORT", "FROM", "IF", "ELSE", "QUESTION", "MAXIMIZE", "MINIMIZE", 
		"EVALUATE", "PLUS", "MINUS", "MULT", "QUOT", "MODULE", "POWER", "CONJUNCTION", 
		"DISJUNCTION", "NOT", "PIPE", "LT", "LE", "GT", "GE", "EQUAL", "DIFF", 
		"ASSIGN", "RARROW", "FATARROW", "IMPLIE", "LBRACE", "RBRACE", "LPARENS", 
		"RPARENS", "LBRACKET", "RBRACKET", "TYPEE", "AS", "AND", "WHERE", "NATIVE", 
		"UNINTERPRETED", "ABSTRACTION", "DOTDOT", "DOT", "COLON", "COMMA", "SEMICOLON", 
		"BOOLEAN", "INTEGER", "FLOAT", "STRING", "IDENTIFIER", "TYPEE_IDENTIFIER", 
		"ABSTRACT_TYPEE_IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aeon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AeonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AeonContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AeonParser.EOF, 0); }
		public List<ImprtContext> imprt() {
			return getRuleContexts(ImprtContext.class);
		}
		public ImprtContext imprt(int i) {
			return getRuleContext(ImprtContext.class,i);
		}
		public List<Typee_aliasContext> typee_alias() {
			return getRuleContexts(Typee_aliasContext.class);
		}
		public Typee_aliasContext typee_alias(int i) {
			return getRuleContext(Typee_aliasContext.class,i);
		}
		public List<Typee_declarationContext> typee_declaration() {
			return getRuleContexts(Typee_declarationContext.class);
		}
		public Typee_declarationContext typee_declaration(int i) {
			return getRuleContext(Typee_declarationContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TypeeContext> typee() {
			return getRuleContexts(TypeeContext.class);
		}
		public TypeeContext typee(int i) {
			return getRuleContext(TypeeContext.class,i);
		}
		public AeonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aeon; }
	}

	public final AeonContext aeon() throws RecognitionException {
		AeonContext _localctx = new AeonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aeon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IMPORT) | (1L << IF) | (1L << QUESTION) | (1L << MAXIMIZE) | (1L << MINIMIZE) | (1L << EVALUATE) | (1L << MINUS) | (1L << NOT) | (1L << LBRACE) | (1L << LPARENS) | (1L << TYPEE) | (1L << ABSTRACTION) | (1L << BOOLEAN) | (1L << INTEGER) | (1L << FLOAT) | (1L << STRING) | (1L << IDENTIFIER) | (1L << TYPEE_IDENTIFIER) | (1L << ABSTRACT_TYPEE_IDENTIFIER))) != 0)) {
				{
				setState(64);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(58);
					imprt();
					}
					break;
				case 2:
					{
					setState(59);
					typee_alias();
					}
					break;
				case 3:
					{
					setState(60);
					typee_declaration();
					}
					break;
				case 4:
					{
					setState(61);
					function();
					}
					break;
				case 5:
					{
					setState(62);
					statement();
					}
					break;
				case 6:
					{
					setState(63);
					typee();
					}
					break;
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprtContext extends ParserRuleContext {
		public Regular_importContext regular_import() {
			return getRuleContext(Regular_importContext.class,0);
		}
		public Function_importContext function_import() {
			return getRuleContext(Function_importContext.class,0);
		}
		public ImprtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprt; }
	}

	public final ImprtContext imprt() throws RecognitionException {
		ImprtContext _localctx = new ImprtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imprt);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				regular_import();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				function_import();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Regular_importContext extends ParserRuleContext {
		public Import_pathContext path;
		public TerminalNode IMPORT() { return getToken(AeonParser.IMPORT, 0); }
		public TerminalNode SEMICOLON() { return getToken(AeonParser.SEMICOLON, 0); }
		public Import_pathContext import_path() {
			return getRuleContext(Import_pathContext.class,0);
		}
		public Regular_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regular_import; }
	}

	public final Regular_importContext regular_import() throws RecognitionException {
		Regular_importContext _localctx = new Regular_importContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regular_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(IMPORT);
			setState(76);
			((Regular_importContext)_localctx).path = import_path();
			setState(77);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_importContext extends ParserRuleContext {
		public Token functionName;
		public Import_pathContext path;
		public TerminalNode IMPORT() { return getToken(AeonParser.IMPORT, 0); }
		public TerminalNode FROM() { return getToken(AeonParser.FROM, 0); }
		public TerminalNode SEMICOLON() { return getToken(AeonParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AeonParser.IDENTIFIER, 0); }
		public Import_pathContext import_path() {
			return getRuleContext(Import_pathContext.class,0);
		}
		public Function_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_import; }
	}

	public final Function_importContext function_import() throws RecognitionException {
		Function_importContext _localctx = new Function_importContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(IMPORT);
			setState(80);
			((Function_importContext)_localctx).functionName = match(IDENTIFIER);
			setState(81);
			match(FROM);
			setState(82);
			((Function_importContext)_localctx).path = import_path();
			setState(83);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_pathContext extends ParserRuleContext {
		public Token directory;
		public Token name;
		public List<TerminalNode> IDENTIFIER() { return getTokens(AeonParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AeonParser.IDENTIFIER, i);
		}
		public List<TerminalNode> QUOT() { return getTokens(AeonParser.QUOT); }
		public TerminalNode QUOT(int i) {
			return getToken(AeonParser.QUOT, i);
		}
		public List<TerminalNode> DOTDOT() { return getTokens(AeonParser.DOTDOT); }
		public TerminalNode DOTDOT(int i) {
			return getToken(AeonParser.DOTDOT, i);
		}
		public Import_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_path; }
	}

	public final Import_pathContext import_path() throws RecognitionException {
		Import_pathContext _localctx = new Import_pathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_import_path);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					((Import_pathContext)_localctx).directory = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==DOTDOT || _la==IDENTIFIER) ) {
						((Import_pathContext)_localctx).directory = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(86);
					match(QUOT);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(92);
			((Import_pathContext)_localctx).name = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typee_aliasContext extends ParserRuleContext {
		public Typee_basic_typeContext name;
		public TypeeContext alias;
		public TerminalNode TYPEE() { return getToken(AeonParser.TYPEE, 0); }
		public TerminalNode AS() { return getToken(AeonParser.AS, 0); }
		public TerminalNode SEMICOLON() { return getToken(AeonParser.SEMICOLON, 0); }
		public Typee_basic_typeContext typee_basic_type() {
			return getRuleContext(Typee_basic_typeContext.class,0);
		}
		public TypeeContext typee() {
			return getRuleContext(TypeeContext.class,0);
		}
		public Typee_aliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typee_alias; }
	}

	public final Typee_aliasContext typee_alias() throws RecognitionException {
		Typee_aliasContext _localctx = new Typee_aliasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typee_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(TYPEE);
			setState(95);
			((Typee_aliasContext)_localctx).name = typee_basic_type();
			setState(96);
			match(AS);
			setState(97);
			((Typee_aliasContext)_localctx).alias = typee();
			setState(98);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typee_declarationContext extends ParserRuleContext {
		public Regular_typee_declarationContext regular_typee_declaration() {
			return getRuleContext(Regular_typee_declarationContext.class,0);
		}
		public Parameterized_typee_declarationContext parameterized_typee_declaration() {
			return getRuleContext(Parameterized_typee_declarationContext.class,0);
		}
		public Typee_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typee_declaration; }
	}

	public final Typee_declarationContext typee_declaration() throws RecognitionException {
		Typee_declarationContext _localctx = new Typee_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typee_declaration);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				regular_typee_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				parameterized_typee_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Regular_typee_declarationContext extends ParserRuleContext {
		public TypeeContext name;
		public TerminalNode TYPEE() { return getToken(AeonParser.TYPEE, 0); }
		public TerminalNode SEMICOLON() { return getToken(AeonParser.SEMICOLON, 0); }
		public TypeeContext typee() {
			return getRuleContext(TypeeContext.class,0);
		}
		public Regular_typee_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regular_typee_declaration; }
	}

	public final Regular_typee_declarationContext regular_typee_declaration() throws RecognitionException {
		Regular_typee_declarationContext _localctx = new Regular_typee_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_regular_typee_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TYPEE);
			setState(105);
			((Regular_typee_declarationContext)_localctx).name = typee();
			setState(106);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameterized_typee_declarationContext extends ParserRuleContext {
		public TypeeContext name;
		public Parameters_typee_declarationContext params;
		public TerminalNode TYPEE() { return getToken(AeonParser.TYPEE, 0); }
		public TerminalNode LBRACE() { return getToken(AeonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AeonParser.RBRACE, 0); }
		public TypeeContext typee() {
			return getRuleContext(TypeeContext.class,0);
		}
		public Parameters_typee_declarationContext parameters_typee_declaration() {
			return getRuleContext(Parameters_typee_declarationContext.class,0);
		}
		public Parameterized_typee_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterized_typee_declaration; }
	}

	public final Parameterized_typee_declarationContext parameterized_typee_declaration() throws RecognitionException {
		Parameterized_typee_declarationContext _localctx = new Parameterized_typee_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterized_typee_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(TYPEE);
			setState(109);
			((Parameterized_typee_declarationContext)_localctx).name = typee();
			setState(110);
			match(LBRACE);
			setState(111);
			((Parameterized_typee_declarationContext)_localctx).params = parameters_typee_declaration();
			setState(112);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameters_typee_declarationContext extends ParserRuleContext {
		public List<Typee_definitionContext> typee_definition() {
			return getRuleContexts(Typee_definitionContext.class);
		}
		public Typee_definitionContext typee_definition(int i) {
			return getRuleContext(Typee_definitionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(AeonParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(AeonParser.SEMICOLON, i);
		}
		public Parameters_typee_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters_typee_declaration; }
	}

	public final Parameters_typee_declarationContext parameters_typee_declaration() throws RecognitionException {
		Parameters_typee_declarationContext _localctx = new Parameters_typee_declarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameters_typee_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				typee_definition();
				setState(115);
				match(SEMICOLON);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeeContext extends ParserRuleContext {
		public Typee_refinedContext typee_refined() {
			return getRuleContext(Typee_refinedContext.class,0);
		}
		public Typee_abstraction_typeContext typee_abstraction_type() {
			return getRuleContext(Typee_abstraction_typeContext.class,0);
		}
		public Typee_definitionContext typee_definition() {
			return getRuleContext(Typee_definitionContext.class,0);
		}
		public Typee_basic_typeContext typee_basic_type() {
			return getRuleContext(Typee_basic_typeContext.class,0);
		}
		public Typee_type_abstractContext typee_type_abstract() {
			return getRuleContext(Typee_type_abstractContext.class,0);
		}
		public TypeeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typee; }
	}

	public final TypeeContext typee() throws RecognitionException {
		TypeeContext _localctx = new TypeeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_typee);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				typee_refined();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				typee_abstraction_type();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				typee_definition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				typee_basic_type();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				typee_type_abstract();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typee_refinedContext extends ParserRuleContext {
		public TypeeContext typeeRefined;
		public ExpressionContext condition;
		public TerminalNode LBRACE() { return getToken(AeonParser.LBRACE, 0); }
		public TerminalNode PIPE() { return getToken(AeonParser.PIPE, 0); }
		public TerminalNode RBRACE() { return getToken(AeonParser.RBRACE, 0); }
		public TypeeContext typee() {
			return getRuleContext(TypeeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Typee_refinedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typee_refined; }
	}

	public final Typee_refinedContext typee_refined() throws RecognitionException {
		Typee_refinedContext _localctx = new Typee_refinedContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_typee_refined);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(LBRACE);
			setState(129);
			((Typee_refinedContext)_localctx).typeeRefined = typee();
			setState(130);
			match(PIPE);
			setState(131);
			((Typee_refinedContext)_localctx).condition = expression(0);
			setState(132);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typee_abstraction_typeContext extends ParserRuleContext {
		public TypeeContext argTypee;
		public TypeeContext returnTypee;
		public TerminalNode LPARENS() { return getToken(AeonParser.LPARENS, 0); }
		public TerminalNode RARROW() { return getToken(AeonParser.RARROW, 0); }
		public TerminalNode RPARENS() { return getToken(AeonParser.RPARENS, 0); }
		public List<TypeeContext> typee() {
			return getRuleContexts(TypeeContext.class);
		}
		public TypeeContext typee(int i) {
			return getRuleContext(TypeeContext.class,i);
		}
		public Typee_abstraction_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
